--- a/adae-ios-atsushi/Base.lproj/LaunchScreen.storyboard
+++ b/adae-ios-atsushi/Base.lproj/LaunchScreen.storyboard
@@ -16,6 +16,20 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-lg-white" translatesAutoresizingMaskIntoConstraints="NO" id="BMe-I4-sKR">
+                                <rect key="frame" x="171" y="103" width="72" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="72" id="FHo-FB-a0o"/>
+                                    <constraint firstAttribute="height" constant="72" id="XdE-qA-G2F"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.27000284194946289" green="0.65972608327865601" blue="0.97656780481338501" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="BMe-I4-sKR" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Aeu-yY-PNE"/>
+                            <constraint firstItem="BMe-I4-sKR" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="83" id="Xar-li-pBG"/>
+                        </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                 </viewController>
@@ -24,4 +38,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo-lg-white" width="76" height="76"/>
+    </resources>
 </document>
