--- a/adae-ios-atsushi/Base.lproj/Main.storyboard
+++ b/adae-ios-atsushi/Base.lproj/Main.storyboard
@@ -290,7 +290,7 @@
         <scene sceneID="dNN-4v-7zT">
             <objects>
                 <tableViewController id="gYN-Af-bBs" customClass="MessageTabController" customModule="adae" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="K8I-Z5-LIu">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="150" sectionHeaderHeight="28" sectionFooterHeight="28" id="K8I-Z5-LIu">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -302,22 +302,40 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="149"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Bh8-4j-nGz">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Bh8-4j-nGz">
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="150" id="mTf-MS-ZSw"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2lu-qT-nZj">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2lu-qT-nZj">
                                             <rect key="frame" x="158" y="8" width="141" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="2bR-be-yP6"/>
+                                                <constraint firstAttribute="width" constant="141" id="EZH-dx-DSg"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RRU-D2-q3K">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RRU-D2-q3K">
                                             <rect key="frame" x="158" y="37" width="248" height="104"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Bh8-4j-nGz" firstAttribute="top" secondItem="RRy-Tu-NQ5" secondAttribute="top" id="8ts-sa-RcT"/>
+                                        <constraint firstItem="2lu-qT-nZj" firstAttribute="top" secondItem="RRy-Tu-NQ5" secondAttribute="topMargin" id="9Qh-op-fXM"/>
+                                        <constraint firstItem="RRU-D2-q3K" firstAttribute="trailing" secondItem="RRy-Tu-NQ5" secondAttribute="trailingMargin" id="9XC-0F-ZN3"/>
+                                        <constraint firstItem="2lu-qT-nZj" firstAttribute="leading" secondItem="Bh8-4j-nGz" secondAttribute="trailing" constant="8" symbolic="YES" id="FPl-Bb-WG5"/>
+                                        <constraint firstItem="Bh8-4j-nGz" firstAttribute="centerY" secondItem="RRy-Tu-NQ5" secondAttribute="centerY" id="Hzy-eT-Q2p"/>
+                                        <constraint firstItem="Bh8-4j-nGz" firstAttribute="leading" secondItem="RRy-Tu-NQ5" secondAttribute="leading" id="jYv-F0-UcZ"/>
+                                        <constraint firstItem="RRU-D2-q3K" firstAttribute="top" secondItem="2lu-qT-nZj" secondAttribute="bottom" constant="8" symbolic="YES" id="klg-gU-5p2"/>
+                                        <constraint firstItem="RRU-D2-q3K" firstAttribute="bottom" secondItem="RRy-Tu-NQ5" secondAttribute="bottomMargin" id="yQf-s5-bQz"/>
+                                        <constraint firstItem="2lu-qT-nZj" firstAttribute="leading" secondItem="RRU-D2-q3K" secondAttribute="leading" id="zjf-fj-W71"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="conversation_title" destination="2lu-qT-nZj" id="aUe-6U-FUB"/>
@@ -411,7 +429,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="149"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lfz-X0-IPc">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lfz-X0-IPc">
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="150" id="SXr-4V-iCf"/>
